--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,2 +1,25 @@
 /* Importo Bootstrap nel mio foglio di stile */
 @import '~bootstrap/scss/bootstrap.scss';
+
+/* Importo le variabili scss */
+@import "./_variables.scss";
+
+/* Importo Roboto da Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.my-btn {
+  background-color: $primary-color;
+  color: white;
+  text-transform: uppercase;
+  padding: .3rem 1.9rem;
+  border: none;
+}
+
+.my-btn-yellow {
+  background-color: $secondary-color;
+  color: $paragraph-color;
+}
