Finish Header.vue

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,5 +1,6 @@
 /* Colore per bg button primari, titoli e footer-top */
-$primary-color: #1e1e1e;
+//$primary-color: #1e1e1e;
+$primary-color: #31312f;
 
 /* Colore per i testi */
 $paragraph-color: #6b6868;
