--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -7,12 +7,25 @@
 /* Importo le variabili scss */
 @import "./_variables.scss";
 
+/* Importo Raleway Font da Google Font */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 /* Importo Montserrat da Google Font */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Raleway', sans-serif;
+}
+
+h1 {
+  font-weight: 800;
+  font-size: 3.5rem;
+}
+
+h3 {
+  font-weight: 400;
 }
 
 .my-fw-400 {
@@ -25,7 +38,6 @@ body {
 
 .my-color-title {
   color: $primary-color;
-
 }
 
 .my-btn {
@@ -43,4 +55,17 @@ body {
 
 .my-text-yellow {
   color: $secondary-color;
+}
+
+.my-flex-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.my-flex-column-center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
