Add cards in 'Articles'

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -66,6 +66,22 @@ div.layover {
   color: $secondary-color;
 }
 
+.bg-cyan {
+  background-color: #4ea4a5;
+}
+
+.bg-lg-blue {
+  background-color: #4e6da5;
+}
+
+.bg-orange {
+  background-color: #f6722a;
+}
+
+.bg-lg-green {
+  background-color: #a7cf47;
+}
+
 .my-yellow-hr {
   width: 200px;
   border-bottom: 2px solid $secondary-color;
