--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -117,3 +117,22 @@ div.end-section h6 {
   text-transform: uppercase;
   font-weight: 300;
 }
+
+div.arch {
+  width: 100%;
+  height: 130px;
+  background-color: white;
+  position: absolute;
+}
+
+div.arch.arch-top {
+  top: 0;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+}
+
+div.arch.arch-bottom {
+  bottom: 0;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
