Complete 'section#footer-nav'

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,4 @@
-/* Colore per bg button primari, titoli e footer-top */
+/* Colore per bg button primari, titoli */
 //$primary-color: #1e1e1e;
 $primary-color: #31312f;
 
